# CPPPrimer

./: C++primer.md  CMakeLists.txt  README.md
src/1/: CMakeLists.txt
testSrc/: README.md
testSrc/ch01/: CMakeLists.txt  defineFunctest.cpp  test1.17  test1.17.cpp  test1.4.1  test1.4.1.cpp
testSrc/ch02/: CMakeLists.txt  test2.1.2.cpp  test2.14.cpp
testSrc/ch03/: CMakeLists.txt  test3.2.2.cpp  test3.2.3.cpp  test3.3.3.cpp  test3.5.3.cpp  test3.5.4.cpp  test3.5.5.cpp  test3.6.cpp  testFor  testFor.cpp
testSrc/ch04/: CMakeLists.txt  test4.10.cpp  test4.2.cpp  test4.3.cpp  test4.7.cpp  test4.8.cpp  test4.9.cpp
testSrc/ch05/: CMakeLists.txt  test5.1.cpp  test5.3.1.cpp  test5.3.2.cpp  test5.4.1.cpp  test5.6.3.cpp
testSrc/tests/: CMakeLists.txt  README.md  test4.6.cpp  testDecAndDef.cpp  testInitial.cpp  varDefine.cpp
